# ferris-say

./: Cargo.toml  install.sh
src/: content.json  main.rs
src/resources/: content.json
