[package]
name = "ferris-say"
version = "0.1.0"
authors = ["FLAMINGO <flamingodev@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.0"
serde_json = "1.0.64"
serde = "1.0.124"
serde_derive = "1.0.124"
rand = "0.8.3"